# CRC-in-Nanox

./: AUTHORS_8md.html  HOW_TO_INSTALL.txt  README.md  README_8md.html  classWorkDescriptor.html  classes.html  classnanos_1_1System.html  configure.ac  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions_vars.html  md_AUTHORS.html  namespacemembers_vars.html  namespacenanos.html  namespaces.html  smpdd_8cpp.html  smpdd_8cpp_source.html  system_8cpp.html  system__decl_8hpp.html  system__decl_8hpp_source.html  workdescriptor_8cpp.html
doc/: paraver_configs.mk
doc/paraver_configs/ompss/runtime/: released_task.cfg  setting_up_task.cfg
doc/paraver_configs/ompss/runtime/resiliency/: 2dh_task_checkpoint_duration.cfg  3dh_checkpoint_task_duration.cfg  checkpoint_task.cfg  failure_rate.cfg  in_input_checkpoint.cfg  in_output_checkpoint.cfg  task_failure_rate.cfg  time_between_failures.cfg
gh-pages/: AUTHORS_8md_source.html  README_8md_source.html  annotated.html  classnanos_1_1System-members.html  classsmpdd.html  dir_352b76a0bd47dd8694def19b2f7da5af.html  dir_70d5e250c66d001b18da37689179cade.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  md_README.html  menudata.js  namespacemembers.html  pages.html  structLoadModule-members.html  structLoadModule.html  structnanos_1_1System_1_1crcStruct-members.html  structnanos_1_1System_1_1crcStruct.html  system_8cpp_source.html  workdescriptor_8cpp_source.html
gh-pages/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_4.js  namespaces_0.js  pages_1.js  pages_2.js  searchdata.js  variables_1.js  variables_2.js
m4/: ax_boost_base.m4  ax_check_memkind.m4  ax_check_resiliency.m4  ax_cxx_compile_stdcxx_11.m4
search/: all_6.js  classes_2.js  functions_0.js  functions_5.js
src/: common.am
src/apis/: Makefile.am
src/apis/c/: nanos_atomic.cpp  nanos_finders.cpp  nanos_reduction.h  nanos_sys.cpp
src/apis/error-injection/: nanos-error-injection.cpp  nanos-error-injection.h
src/arch/cluster/: clusterdevice_decl.hpp  clustermpiplugin.cpp  clusterplugin.cpp  gasnetapi.cpp
src/arch/fpga/: fpgaconfig.cpp  fpgaprocessor.cpp
src/arch/gpu/: gpuconfig.cpp  gpudevice.cpp  gpudevice_decl.hpp  gpuplugin.cpp  gpuprocessor.cpp  gputhread_decl.hpp  gpuutils.hpp
src/arch/mpi/: mpidd.hpp  mpidevice.cpp  mpidevice_decl.hpp  mpiprocessor.cpp  mpiremotenode.cpp  mpithread.cpp
src/arch/opencl/: openclconfig.cpp  opencldevice_decl.hpp  openclplugin.cpp  openclprocessor.cpp  openclprofiler.cpp  openclthread.cpp  openclthread_decl.hpp
src/arch/smp/: smpdd.cpp  smpdd.hpp  smpdevice.hpp  smpdevice_decl.hpp  smpplugin.cpp  smpprocessor.cpp  smpthread.cpp  smpthread.hpp  smptransferqueue.hpp  smptransferqueue_decl.hpp
src/arch/unix-os/: Makefile.am  mutex.cpp  mutex.hpp  osallocator_decl.hpp  pthread.cpp  pthread_decl.hpp
src/core/: Makefile.am  address.hpp  address_decl.hpp  addressspace.cpp  addressspace_decl.hpp  asyncthread.cpp  asyncthread.hpp  asyncthread_decl.hpp  backupcachecopy_decl.hpp  backupmanager.cpp  backupmanager.hpp  backupmanager_aux.cpp  backupmanager_fwd.hpp  backupprivatecopy.hpp  backupprivatecopy_decl.hpp  basedependency_decl.hpp  basethread.cpp  basethread.hpp  basethread_decl.hpp  cachedregionstatus.hpp  cachedregionstatus_decl.hpp  copydata.cpp  copydata.hpp  copydata_decl.hpp  dataaccess.hpp  dataaccess_decl.hpp  dependableobject.hpp  dependableobject_decl.hpp  dependableobjectwd.cpp  dependableobjectwd_decl.hpp  dependenciesdomain.hpp  deviceops.hpp  deviceops_decl.hpp  globalregt.cpp  globalregt_decl.hpp  instrumentation.cpp  instrumentation.hpp  instrumentation_decl.hpp  instrumentationcontext_decl.hpp  instrumentationmodule_decl.hpp  (+39 more)
src/core/performance/: libnanox.la  libresiliency.la
src/core/performance/.libs/: libnanox.la  libnanox.lai  libnanox.so.1.0.0  libresiliency.la
src/plugins/: Makefile.am
src/plugins/error-injection/: blockaccessinjectionplugin.cpp  stubinjectionplugin.cpp
src/plugins/instrumentation/: extrae.cpp  ompt.cpp
src/plugins/sched/: affinity-ready_sched.cpp  bf_sched.cpp  dbf_sched.cpp  mpq_sched.cpp  socket_sched.cpp  versioning_sched.cpp
src/plugins/slicers/: dynamic_for.cpp  guided_for.cpp  repeat_n.cpp  replicate.cpp  static_for.cpp
src/plugins/throttle/: hysteresis_throttle.cpp  readytasks_throttle.cpp
src/plugins/worksharing/: static.cpp
src/pms/openmp/: omp_init.cpp
src/support/: Makefile.am  atomic.hpp  config.cpp  config.hpp  config_decl.hpp  dbmanager.hpp  dbmanager_sqlite3.cpp  dbmanager_sqlite3_empty.cpp  debug.cpp  debug.hpp  depsregion.hpp  depsregion_decl.hpp  error.hpp  frequency.hpp  frequency_traits.hpp  hwloc_decl.hpp  memorymap.cpp  memorymap.hpp  memorymap_decl.hpp  memtracker_decl.hpp  new.cpp  packer.cpp  packer_decl.hpp  plugin.cpp  queue_decl.hpp  region.hpp  region_decl.hpp  simpleallocator.cpp  simpleallocator_decl.hpp  xstring.hpp
src/support/error-injection/: blockaccessinjector.hpp  errorinjectionconfiguration.hpp  errorinjectioninterface.cpp  errorinjectioninterface.hpp  errorinjectionplugin.hpp  errorinjectionpolicy.hpp  errorinjectionthread.hpp  periodicinjectionpolicy.hpp  stubinjector.hpp
src/support/exception/: checkpointfailure.hpp  exceptiontracer.hpp  executionfailure.hpp  failurestats.cpp  failurestats.hpp  genericexception.cpp  genericexception.hpp  invalidatedregionfound.hpp  mpierror.cpp  mpierror.hpp  mpierrortranslator.hpp  operationfailure.hpp  restorefailure.hpp  signalexception.cpp  signalexception.hpp  signalinfo.hpp  signaltranslator.hpp  taskrecoveryfailed.hpp
src/support/memory/: accessrights.hpp  blockedpage.hpp  memoryaddress.hpp  memorychunk.hpp  memorypage.hpp  vmentry.cpp  vmentry.hpp
tests/gens/: resiliency-generator.in
tests/test/00_arch/smp/resiliency/: fib_resiliency.cpp
